# prior-lang

./: .gitignore  CMakeLists.txt  README.md  TODO.md  a.out  array_and_compound.pr  build.sh  code.txt  test.pr
.github/workflows/: c-cpp.yml
src/: ast.c  ast.h  bytecode.c  bytecode.h  error.c  error.h  interp.c  interp.h  lexer.c  lexer.h  main.c  mem.c  mem.h  nodepool.c  opcode.c  opcode.h  parser.c  parser.h  printast.c  scope.c  scope.h  semantics.c  semantics.h  token.h  type.c  type.h  utils.c  utils.h  value.c  value.h  value_types.h  vm.c  vm.h
test/: lexer.c  lexer.pr  parser.c  typedef.c
